Top header alignment fixed

--- a/Pierre/style.css
+++ b/Pierre/style.css
@@ -10,7 +10,7 @@
 		color : black;
 	}
 	
-	.Header
+	.Headers
 	{
 		background-color : #d8dee9
 	}
@@ -35,7 +35,7 @@
 		color : white;
 	}
 	
-	.Header
+	.Headers
 	{
 		background : #2e3440;
 	}
@@ -63,9 +63,8 @@ body
 	margin : 0% 20% 5% 20%;
 }
 
-.Header
+.Headers
 {
-	position : sticky;
 	margin : 0% -33.3% 0% -33.3%;
 }
 
@@ -77,9 +76,8 @@ body
 		margin : 0% 3% 5% 3%;
 	}
 	
-	.Header
+	.Headers
 	{
-		position : sticky;
 		margin : 0% -3.4% 0% -3.4%;
 	}
 }
@@ -116,26 +114,45 @@ img
 	padding-top : 5%
 }
 
+.Headers
+{
+	position : sticky;
+}
+
+#Top_Header
+{
+	display: flex;
+	align-items : center;
+}
+
 #Website_Title
 {
 	font-family : 'Perfect DOS VGA 437 Win', Arial;
 	font-size : 3.5em;
 	padding-left : 5%;
+	padding-top : 1%;
 }
 
 #Website_URLs
 {
 	font-family : Arial;
 	padding-right : 5%;
+	padding-top : 1%;
+	vertical-align : baseline;
 	font-size : 1.5em;
-	float : right;
+	text-align : end;
+}
+
+#Website_Title,
+#Website_URLs
+{
+  flex: 1;
 }
 
 #Sub_Website_URLs
 {
 	font-family : Arial;
 	text-align : center;
-	float : center;
 	padding-bottom : 1%
 }
 
